Added Break lines for HTML

--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 <h3>A poem by <strong>Claude Giroux</strong></h3>
     
     <p>
-Too much,
+Too much, <br>
 Or not enough,
-
-As empty as a void,
+<br>
+As empty as a void, <br>
 Or as full as a day when all you want to do is nothing,
-
-Living with death,
+<br>
+Living with death, <br>
 Or dying with life,
-
+<br>
 Is either a viable option?,
-
-Conclusions never reached,
+<br>
+Conclusions never reached, <br>
 Have to think about my feet 'less I fall into a trap of my own doing,
-
-The mind is but a fly that is stuck between your eyes,
+<br>
+The mind is but a fly that is stuck between your eyes, <br>
 It cannot see and it does not know where it's going.
     </p>
   </body>
