--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 <h3>A poem by <strong>Claude Giroux</strong></h3>
     
     <p>
-Too much, <br>
-Or not enough,
+Too much,<br>
+Or not enough,<br>
+
+As empty as a void,<br>
+Or as full as a day when all you want to do is nothing,<br>
+
+Living with death,<br>
+Or dying with life,<br>
+
+Is either a viable option?,<br>
 <br>
-As empty as a void, <br>
-Or as full as a day when all you want to do is nothing,
-<br>
-Living with death, <br>
-Or dying with life,
-<br>
-Is either a viable option?,
-<br>
-Conclusions never reached, <br>
-Have to think about my feet 'less I fall into a trap of my own doing,
-<br>
-The mind is but a fly that is stuck between your eyes, <br>
-It cannot see and it does not know where it's going.
+Conclusions never reached,<br>
+Have to think about my feet 'less I fall into a trap of my own doing,<br>
+
+The mind is but a fly that is stuck between your eyes,<br>
+It cannot see and it does not know where it's going.<br>
     </p>
   </body>
 </html>
