--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
 <html>
-  <body>
+  <head>
+    <title>With/Without</title>
     <h1>With/Without</h1>
 <h3>A poem by <strong>Claude Giroux</strong></h3>
-    
+  </head>
+    <body>
     <p>
 Too much,<br>
 Or not enough,<br>
